@@ -1,3 +1,7 @@
+2013-01-06 Borut Razem <borut.razem AT gmail.com>
+
+	* src/SDCCasm.c, src/SDCCasm.h: excluded unused asm mappings
+
 2013-01-05 Molnar Karoly <molnarkaroly AT users.sf.net>
 
 	* support/scripts/mcs51-disasm: More informations from map file.
